--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Lab 1 Wright</string>
+    <string name="textInputLabel">Text Input</string>
+    <string name="mainButtonText">Launch Second Activity</string>
+    <string name="secondButtonText">Toast Text</string>
 </resources>
